tests/errors/sem.too-many-args.array-init-list.or
main :: () -> void {
    [2]int.{1, 2, 3};
};
